--- a/app/components/fights.module.css
+++ b/app/components/fights.module.css
@@ -4,3 +4,34 @@
   margin: 1rem;
   justify-content: center;
 }
+
+.wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.hidden {
+  filter: blur(0.25rem);
+}
+
+.fighterWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem;
+}
+
+.fightInfoWrapper {
+  font-weight: 100;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem 0;
+  gap: 1rem 0;
+}
+
+/* .flightInfoWrapper > div {
+  display: flex;
+  flex-direction: column;
+} */
