--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
+  margin: 1.5rem;
 }
 
 .description {
@@ -98,7 +98,7 @@
 
 .center::before,
 .center::after {
-  content: "";
+  content: '';
   left: 50%;
   position: absolute;
   filter: blur(45px);
