--- a/app/globals.css
+++ b/app/globals.css
@@ -105,6 +105,10 @@ a {
   text-decoration: none;
 }
 
+summary {
+  margin: 0.25rem 0;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
