--- a/app/globals.css
+++ b/app/globals.css
@@ -109,6 +109,12 @@ summary {
   margin: 0.25rem 0;
 }
 
+input[type='text'],
+input[type='number'],
+textarea {
+  font-size: 16px;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
