add nationality, selectable options

--- a/app/globals.css
+++ b/app/globals.css
@@ -109,6 +109,12 @@ summary {
   margin: 0.25rem 0;
 }
 
+span {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
 input[type='text'],
 input[type='number'],
 textarea {
