--- a/app/components/form.module.css
+++ b/app/components/form.module.css
@@ -1,5 +1,7 @@
 .formWrapper {
-  /* margin: 0.5rem 0; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .form {
   display: flex;
