--- a/app/components/answer.module.css
+++ b/app/components/answer.module.css
@@ -8,6 +8,8 @@
   display: flex;
   justify-content: center;
   margin: 1rem 0;
+  align-items: center;
+  flex-direction: column;
 }
 
 .answer > h2 {
@@ -15,4 +17,8 @@
   -webkit-animation: glow 1s ease-in-out infinite alternate;
   -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
+}
+
+.answer > p {
+  font-weight: 200;
 }
