--- a/app/components/header.module.css
+++ b/app/components/header.module.css
@@ -3,12 +3,14 @@
   flex-direction: column;
   gap: 0.5rem;
   margin: 0.5rem;
+  width: 350px;
+  max-width: 350px;
 }
 
 .header {
   font-size: 2rem;
   font-weight: 800;
-  width: 350px;
+  max-width: 350px;
 }
 .subheader {
   font-size: 1rem;
